--- a/resources/debian/control
+++ b/resources/debian/control
@@ -1,9 +1,21 @@
 Package: quickflow-server
 Version: 1.0.0
-Section: base
+Section: web
 Priority: optional
 Architecture: amd64
-Essential: no
+Depends: postgresql (>= 12.0)
+Recommends: nginx
+Homepage: https://github.com/username/quickflow
 Maintainer: Shota Shimazu <shota.shimazu@magique.app>
-Description: QuickFlow is a high-performance and flexible content management system (CMS) and API platform developed in Go.
-It leverages the Echo web framework and GORM, using a PostgreSQL database for its backend. A key feature of this application is that it allows users to freely define their own data schemas and easily build customized APIs. While offering functionalities similar to MicroCMS and Hasura, it serves as an efficient web service development platform that takes advantage of Go's speed and simplicity.
+Description: High-performance CMS and API platform written in Go
+ QuickFlow is a flexible content management system and API platform that
+ enables users to define custom data schemas and build APIs easily. It is
+ built with the Echo web framework and GORM, using PostgreSQL as its
+ backend database.
+ .
+ Features:
+  * Custom schema definition
+  * Automatic REST API generation
+  * High performance Go-based implementation
+  * PostgreSQL integration
+  * Similar functionality to MicroCMS and Hasura
